--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://SalvadorBanuelos424.github.io/",
+  "homepage": "http://SalvadorBanuelos424.github.io/React_CV",
   "name": "reactcv",
   "version": "0.1.0",
   "private": true,
